tests2/tests/snapshots/test__typescript__ts-export-to-files-serialize.snap
---
source: tests2/tests/typescript.rs
expression: fs_to_string(&path).unwrap()
---
test/
  types/
    selection.ts (226 bytes)
    ────────────────────────────────────────
    // This file has been generated by Specta. Do not edit this file manually.
    
    
    export type UserListSelection<name, age> = { 
    		name: name,
    		age: age,
    	};
    
    export type UserSelection<name, age> = { 
    		name: name,
    		age: age,
    	};
    ════════════════════════════════════════

    type_type.ts (103 bytes)
    ────────────────────────────────────────
    // This file has been generated by Specta. Do not edit this file manually.
    
    
    export type Type = never;
    ════════════════════════════════════════

  types.ts (5154 bytes)
  ────────────────────────────────────────
  // This file has been generated by Specta. Do not edit this file manually.
  
  import type { BasicEnum as test_types, FlattenEnum as test_types, GenericType as test_types, InlineStruct as test_types, InlineTuple as test_types, NestedEnum as test_types, OptionalOnTransparentNamedFieldInner as test_types, PlaceholderInnerField as test_types, Recursive as test_types, RecursiveInEnum as test_types, RecursiveInline as test_types, RecursiveMapValue as test_types, RefStruct as test_types, SimpleStruct as test_types, TestEnum as test_types, TransparentTypeInner as test_types } from "./";
  
  export type ActualType = { 
  		a: test_types_GenericType<string>,
  	};
  
  export type BasicEnum = "A" | "B";
  
  export type BracedStruct = string;
  
  export type EnumMacroAttributes = { A: string } | { bbb: number } | { cccc: number } | { D: { a: string; b: number } };
  
  export type EnumReferenceRecordKey = { 
  		a: Partial<{ [key in test_types_BasicEnum]: number }>,
  	};
  
  export type ExtraBracketsInTupleVariant = { A: string };
  
  export type ExtraBracketsInUnnamedStruct = string;
  
  export type FlattenEnum = { tag: "One" } | { tag: "Two" } | { tag: "Three" };
  
  export type FlattenEnumStruct = (test_types_FlattenEnum) & { 
  		outer: string,
  	};
  
  export type FlattenOnNestedEnum = (test_types_NestedEnum) & { 
  		id: string,
  	};
  
  export type GenericStruct<T> = { 
  		arg: T,
  	};
  
  export type GenericTupleStruct<T> = T;
  
  export type GenericType<T> = "Undefined" | T;
  
  export type HasGenericAlias = { [key in number]: string };
  
  export type InlineEnumField = { A: test_types_PlaceholderInnerField };
  
  export type InlineOptionalType = { 
  		optional_field: test_types_PlaceholderInnerField | null,
  	};
  
  export type InlineStruct = { 
  		ref_struct: test_types_SimpleStruct,
  		val: number,
  	};
  
  export type InlineTuple = { 
  		demo: [string, boolean],
  	};
  
  export type InlineTuple2 = { 
  		demo: [test_types_InlineTuple, boolean],
  	};
  
  export type InlinerStruct = { 
  		inline_this: test_types_InlineStruct,
  		dont_inline_this: test_types_RefStruct,
  	};
  
  export type InvalidToValidType = { 
  		cause: null | null,
  	};
  
  export type Issue281 = { 
  		default_unity_arguments: string[],
  	};
  
  /**
   * https://github.com/specta-rs/specta/issues/374
   */
  export type Issue374 = { 
  		foo: boolean,
  		bar: boolean,
  	};
  
  export type KebabCase = { 
  		"test-ing": string,
  	};
  
  export type MacroEnum = { Demo: string } | { Demo2: { demo2: string } };
  
  export type MacroStruct = string;
  
  export type MacroStruct2 = { 
  		demo: string,
  	};
  
  export type MyEmptyInput = Record<string, never>;
  
  export type MyEnum = { A: string } | { B: number };
  
  export type NestedEnum = { type: "a"; value: string } | { type: "b"; value: number };
  
  export type NonOptional = string | null;
  
  export type OptionalInEnum = { A: string | null } | { B: { a: string | null } } | { C: { a?: string | null } };
  
  export type OptionalOnNamedField = string | null;
  
  export type OptionalOnTransparentNamedField = { 
  		b: string | null,
  	};
  
  export type OptionalOnTransparentNamedFieldInner = string | null;
  
  export type OverridenStruct = { 
  		overriden_field: string,
  	};
  
  export type PlaceholderInnerField = { 
  		a: string,
  	};
  
  export type Recursive = { 
  		demo: test_types_Recursive,
  	};
  
  export type RecursiveInEnum = { A: (test_types_RecursiveInEnum) };
  
  export type RecursiveInline = (test_types_RecursiveInline);
  
  export type RecursiveMapValue = { 
  		demo: { [key in string]: test_types_RecursiveMapValue },
  	};
  
  export type RecursiveTransparent = test_types_RecursiveInline;
  
  export type RefStruct = test_types_TestEnum;
  
  export type Regular = { [key in string]: null };
  
  export type Rename = "OneWord" | "Two words";
  
  export type RenameWithWeirdCharsField = { 
  		odata_context: string,
  	};
  
  export type RenameWithWeirdCharsVariant = { "@odata.context": string };
  
  export type SimpleStruct = { 
  		a: number,
  		b: string,
  		c: [number, string, number],
  		d: string[],
  		e: string | null,
  	};
  
  export type SkipVariant = { A: string };
  
  export type SkipVariant2 = { tag: "A"; data: string };
  
  export type SkipVariant3 = { A: { a: string } };
  
  export type SkippedFieldWithinVariant = { type: "A"; data: null } | { type: "B"; data: string };
  
  export type SpectaTypeOverride = { 
  		string_ident: string,
  		u32_ident: number,
  		path: string,
  	};
  
  export type TestEnum = "Unit" | { Single: number } | { Multiple: [number, number] } | { Struct: { a: number } };
  
  export type TransparentType = test_types_TransparentTypeInner;
  
  export type TransparentType2 = null;
  
  export type TransparentTypeInner = { 
  		inner: string,
  	};
  
  export type TransparentTypeWithOverride = string;
  
  export type TupleStruct = string;
  
  export type TupleStruct1 = number;
  
  export type TupleStruct3 = [number, boolean, string];
  
  export type TupleStructWithRep = string;
  
  export type Unit1 = null;
  
  export type Unit2 = Record<string, never>;
  
  export type Unit3 = [];
  
  export type Unit4 = null;
  
  export type Unit5 = "A";
  
  export type Unit6 = { A: [] };
  
  export type Unit7 = { A: Record<string, never> };
  
  export type UnitVariants = "A" | "B" | "C";
  
  export type UntaggedVariants = string | number;
  
  export type Variants = { A: string } | { B: number } | { C: number };
  ════════════════════════════════════════

  typescript.ts (100 bytes)
  ────────────────────────────────────────
  // This file has been generated by Specta. Do not edit this file manually.
  
  
  export type A = never;
  ════════════════════════════════════════

virtual.ts (5945 bytes)
────────────────────────────────────────
// This file has been generated by Specta. Do not edit this file manually.

import type { ActualType as test_types, BasicEnum as test_types, BracedStruct as test_types, EnumMacroAttributes as test_types, EnumReferenceRecordKey as test_types, ExtraBracketsInTupleVariant as test_types, ExtraBracketsInUnnamedStruct as test_types, FlattenEnumStruct as test_types, FlattenOnNestedEnum as test_types, GenericStruct as test_types, GenericTupleStruct as test_types, HasGenericAlias as test_types, InlineEnumField as test_types, InlineOptionalType as test_types, InlineTuple as test_types, InlineTuple2 as test_types, InlinerStruct as test_types, InvalidToValidType as test_types, Issue281 as test_types, Issue374 as test_types, KebabCase as test_types, MacroEnum as test_types, MacroStruct as test_types, MacroStruct2 as test_types, MyEmptyInput as test_types, MyEnum as test_types, NonOptional as test_types, OptionalInEnum as test_types, OptionalOnNamedField as test_types, OptionalOnTransparentNamedField as test_types, OverridenStruct as test_types, PlaceholderInnerField as test_types, Recursive as test_types, RecursiveInEnum as test_types, RecursiveMapValue as test_types, RecursiveTransparent as test_types, RefStruct as test_types, Regular as test_types, Rename as test_types, RenameWithWeirdCharsField as test_types, RenameWithWeirdCharsVariant as test_types, SimpleStruct as test_types, SkipVariant as test_types, SkipVariant2 as test_types, SkipVariant3 as test_types, SkippedFieldWithinVariant as test_types, SpectaTypeOverride as test_types, TestEnum as test_types, TransparentType as test_types, TransparentType2 as test_types, TransparentTypeWithOverride as test_types, TupleStruct as test_types, TupleStruct1 as test_types, TupleStruct3 as test_types, TupleStructWithRep as test_types, Unit1 as test_types, Unit2 as test_types, Unit3 as test_types, Unit4 as test_types, Unit5 as test_types, Unit6 as test_types, Unit7 as test_types, UnitVariants as test_types, UntaggedVariants as test_types, Variants as test_types } from "./";
import type { Type as test_types_type_type } from "./../";

export type Primitives = { 
		"1": number,
		"2": number,
		"3": number,
		"4": number,
		"5": number,
		"6": number,
		"7": number,
		"8": number,
		"9": number,
		a: number,
		b: number,
		c: number,
		d: number,
		e: number,
		f: boolean,
		"10": string,
		"11": { 
	start: number,
	end: number,
},
		"12": { 
	start: number,
	end: number,
},
		"13": null,
		"14": [string, number],
		"15": [string, number, boolean],
		"16": [boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean],
		"17": string,
		"18": string,
		"19": string,
		"1a": string,
		"1b": string,
		"1c": string,
		"1d": string,
		"1e": string,
		"1f": { 
	duration_since_epoch: number,
	duration_since_unix_epoch: number,
},
		"20": { 
	secs: number,
	nanos: number,
},
		"21": string,
		"22": boolean,
		"23": number,
		"24": number[],
		"25": number[],
		"26": number[],
		"27": test_types_MyEnum[],
		"28": test_types_MyEnum[],
		"29": test_types_MyEnum[],
		"2a": number[],
		"2b": number[],
		"2c": number | null,
		"2d": null | null,
		"2e": test_types_Unit1,
		"2f": test_types_Unit2,
		"30": test_types_Unit3,
		"31": test_types_Unit4,
		"32": test_types_Unit5,
		"33": test_types_Unit6,
		"34": test_types_Unit7,
		"35": test_types_SimpleStruct,
		"36": test_types_TupleStruct1,
		"37": test_types_TupleStruct3,
		"38": test_types_TestEnum,
		"39": test_types_RefStruct,
		"3a": test_types_InlinerStruct,
		"3b": test_types_GenericStruct<number>,
		"3c": test_types_GenericStruct<string>,
		"3d": test_types_FlattenEnumStruct,
		"3e": test_types_OverridenStruct,
		"3f": test_types_HasGenericAlias,
		"40": test_types_SkipVariant,
		"41": test_types_SkipVariant2,
		"42": test_types_SkipVariant3,
		"43": test_types_EnumMacroAttributes,
		"44": test_types_InlineEnumField,
		"45": test_types_InlineOptionalType,
		"46": test_types_Rename,
		"47": test_types_TransparentType,
		"48": test_types_TransparentType2,
		"49": test_types_TransparentTypeWithOverride,
		"4a": (number | null)[],
		"4b": Partial<{ [key in test_types_BasicEnum]: null }>,
		"4c": number | null,
		"4d": test_types_PlaceholderInnerField[],
		"4e": Partial<{ [key in test_types_BasicEnum]: number }>,
		"4f": test_types_EnumReferenceRecordKey,
		"50": test_types_FlattenOnNestedEnum,
		"51": null,
		"52": null,
		"53": never,
		"54": test_types_MyEmptyInput,
		"55": string,
		"56": [string],
		"57": test_types_ExtraBracketsInTupleVariant,
		"58": test_types_ExtraBracketsInUnnamedStruct,
		"59": test_types_MyEnum[],
		"5a": test_types_InlineTuple,
		"5b": test_types_InlineTuple2,
		"5c": string,
		"5d": string,
		"5e": test_types_SkippedFieldWithinVariant,
		"5f": test_types_KebabCase,
		"60": string[],
		"61": test_types_Issue281,
		"62": test_types_RenameWithWeirdCharsField,
		"63": test_types_RenameWithWeirdCharsVariant,
		"64": test_types_Issue374,
		"65": test_types_type_type_Type,
		"66": test_types_ActualType,
		"67": test_types_SpectaTypeOverride,
		"68": test_types_InvalidToValidType,
		"69": test_types_TupleStruct,
		"6a": test_types_TupleStructWithRep,
		"6b": test_types_GenericTupleStruct<string>,
		"6c": test_types_BracedStruct,
		"6d": test_types_Recursive,
		"6e": test_types_RecursiveMapValue,
		"6f": test_types_RecursiveTransparent,
		"70": test_types_RecursiveInEnum,
		"71": test_types_NonOptional,
		"72": test_types_OptionalOnNamedField,
		"73": test_types_OptionalOnTransparentNamedField,
		"74": test_types_OptionalInEnum,
		"75": { [key in string]: null },
		"76": test_types_Regular,
		"77": { [key in never]: null },
		"78": Partial<{ [key in test_types_UnitVariants]: null }>,
		"79": Partial<{ [key in test_types_UntaggedVariants]: null }>,
		"7a": Partial<{ [key in test_types_Variants]: null }>,
		"7b": test_types_MacroStruct,
		"7c": test_types_MacroStruct2,
		"7d": test_types_MacroEnum,
	};
════════════════════════════════════════
