tests2/tests/snapshots/test__typescript__ts-export-to-flatfile-both.snap
---
source: tests2/tests/typescript.rs
expression: fs_to_string(&path).unwrap()
---
ts-export-to-flatfile-both (7716 bytes)
────────────────────────────────────────
// This file has been generated by Specta. Do not edit this file manually.



export type A = never;

export type ActualType = { 
		a: GenericType<string>,
	};

export type BasicEnum = "A" | "B";

export type BracedStruct = string;

export type EnumMacroAttributes = { A: string } | { bbb: number } | { cccc: number } | { D: { a: string; b: number } };

export type EnumReferenceRecordKey = { 
		a: Partial<{ [key in BasicEnum]: number }>,
	};

export type ExtraBracketsInTupleVariant = { A: string };

export type ExtraBracketsInUnnamedStruct = string;

export type FlattenEnum = { tag: "One" } | { tag: "Two" } | { tag: "Three" };

export type FlattenEnumStruct = (FlattenEnum) & { 
		outer: string,
	};

export type FlattenOnNestedEnum = (NestedEnum) & { 
		id: string,
	};

export type GenericStruct<T> = { 
		arg: T,
	};

export type GenericTupleStruct<T> = T;

export type GenericType<T> = "Undefined" | T;

export type HasGenericAlias = { [key in number]: string };

export type InlineEnumField = { A: PlaceholderInnerField };

export type InlineOptionalType = { 
		optional_field: PlaceholderInnerField | null,
	};

export type InlineStruct = { 
		ref_struct: SimpleStruct,
		val: number,
	};

export type InlineTuple = { 
		demo: [string, boolean],
	};

export type InlineTuple2 = { 
		demo: [InlineTuple, boolean],
	};

export type InlinerStruct = { 
		inline_this: InlineStruct,
		dont_inline_this: RefStruct,
	};

export type InvalidToValidType = { 
		cause: null | null,
	};

export type Issue281 = { 
		default_unity_arguments: string[],
	};

/**
 * https://github.com/specta-rs/specta/issues/374
 */
export type Issue374 = { 
		foo: boolean,
		bar: boolean,
	};

export type KebabCase = { 
		"test-ing": string,
	};

export type MacroEnum = { Demo: string } | { Demo2: { demo2: string } };

export type MacroStruct = string;

export type MacroStruct2 = { 
		demo: string,
	};

export type MyEmptyInput = Record<string, never>;

export type MyEnum = { A: string } | { B: number };

export type NestedEnum = { type: "a"; value: string } | { type: "b"; value: number };

export type NonOptional = string | null;

export type OptionalInEnum = { A: string | null } | { B: { a: string | null } } | { C: { a?: string | null } };

export type OptionalOnNamedField = string | null;

export type OptionalOnTransparentNamedField = { 
		b: string | null,
	};

export type OptionalOnTransparentNamedFieldInner = string | null;

export type OverridenStruct = { 
		overriden_field: string,
	};

export type PlaceholderInnerField = { 
		a: string,
	};

export type Primitives = { 
		"1": number,
		"2": number,
		"3": number,
		"4": number,
		"5": number,
		"6": number,
		"7": number,
		"8": number,
		"9": number,
		a: number,
		b: number,
		c: number,
		d: number,
		e: number,
		f: boolean,
		"10": string,
		"11": { 
	start: number,
	end: number,
},
		"12": { 
	start: number,
	end: number,
},
		"13": null,
		"14": [string, number],
		"15": [string, number, boolean],
		"16": [boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean],
		"17": string,
		"18": string,
		"19": string,
		"1a": string,
		"1b": string,
		"1c": string,
		"1d": string,
		"1e": string,
		"1f": { 
	duration_since_epoch: number,
	duration_since_unix_epoch: number,
},
		"20": { 
	secs: number,
	nanos: number,
},
		"21": string,
		"22": boolean,
		"23": number,
		"24": number[],
		"25": number[],
		"26": number[],
		"27": MyEnum[],
		"28": MyEnum[],
		"29": MyEnum[],
		"2a": number[],
		"2b": number[],
		"2c": number | null,
		"2d": null | null,
		"2e": Unit1,
		"2f": Unit2,
		"30": Unit3,
		"31": Unit4,
		"32": Unit5,
		"33": Unit6,
		"34": Unit7,
		"35": SimpleStruct,
		"36": TupleStruct1,
		"37": TupleStruct3,
		"38": TestEnum,
		"39": RefStruct,
		"3a": InlinerStruct,
		"3b": GenericStruct<number>,
		"3c": GenericStruct<string>,
		"3d": FlattenEnumStruct,
		"3e": OverridenStruct,
		"3f": HasGenericAlias,
		"40": SkipVariant,
		"41": SkipVariant2,
		"42": SkipVariant3,
		"43": EnumMacroAttributes,
		"44": InlineEnumField,
		"45": InlineOptionalType,
		"46": Rename,
		"47": TransparentType,
		"48": TransparentType2,
		"49": TransparentTypeWithOverride,
		"4a": (number | null)[],
		"4b": Partial<{ [key in BasicEnum]: null }>,
		"4c": number | null,
		"4d": PlaceholderInnerField[],
		"4e": Partial<{ [key in BasicEnum]: number }>,
		"4f": EnumReferenceRecordKey,
		"50": FlattenOnNestedEnum,
		"51": null,
		"52": null,
		"53": never,
		"54": MyEmptyInput,
		"55": string,
		"56": [string],
		"57": ExtraBracketsInTupleVariant,
		"58": ExtraBracketsInUnnamedStruct,
		"59": MyEnum[],
		"5a": InlineTuple,
		"5b": InlineTuple2,
		"5c": string,
		"5d": string,
		"5e": SkippedFieldWithinVariant,
		"5f": KebabCase,
		"60": string[],
		"61": Issue281,
		"62": RenameWithWeirdCharsField,
		"63": RenameWithWeirdCharsVariant,
		"64": Issue374,
		"65": Type,
		"66": ActualType,
		"67": SpectaTypeOverride,
		"68": InvalidToValidType,
		"69": TupleStruct,
		"6a": TupleStructWithRep,
		"6b": GenericTupleStruct<string>,
		"6c": BracedStruct,
		"6d": Recursive,
		"6e": RecursiveMapValue,
		"6f": RecursiveTransparent,
		"70": RecursiveInEnum,
		"71": NonOptional,
		"72": OptionalOnNamedField,
		"73": OptionalOnTransparentNamedField,
		"74": OptionalInEnum,
		"75": { [key in string]: null },
		"76": Regular,
		"77": { [key in never]: null },
		"78": Partial<{ [key in UnitVariants]: null }>,
		"79": Partial<{ [key in UntaggedVariants]: null }>,
		"7a": Partial<{ [key in Variants]: null }>,
		"7b": MacroStruct,
		"7c": MacroStruct2,
		"7d": MacroEnum,
	};

export type Recursive = { 
		demo: Recursive,
	};

export type RecursiveInEnum = { A: (RecursiveInEnum) };

export type RecursiveInline = (RecursiveInline);

export type RecursiveMapValue = { 
		demo: { [key in string]: RecursiveMapValue },
	};

export type RecursiveTransparent = RecursiveInline;

export type RefStruct = TestEnum;

export type Regular = { [key in string]: null };

export type Rename = "OneWord" | "Two words";

export type RenameWithWeirdCharsField = { 
		odata_context: string,
	};

export type RenameWithWeirdCharsVariant = { "@odata.context": string };

export type SimpleStruct = { 
		a: number,
		b: string,
		c: [number, string, number],
		d: string[],
		e: string | null,
	};

export type SkipVariant = { A: string };

export type SkipVariant2 = { tag: "A"; data: string };

export type SkipVariant3 = { A: { a: string } };

export type SkippedFieldWithinVariant = { type: "A"; data: null } | { type: "B"; data: string };

export type SpectaTypeOverride = { 
		string_ident: string,
		u32_ident: number,
		path: string,
	};

export type TestEnum = "Unit" | { Single: number } | { Multiple: [number, number] } | { Struct: { a: number } };

export type TransparentType = TransparentTypeInner;

export type TransparentType2 = null;

export type TransparentTypeInner = { 
		inner: string,
	};

export type TransparentTypeWithOverride = string;

export type TupleStruct = string;

export type TupleStruct1 = number;

export type TupleStruct3 = [number, boolean, string];

export type TupleStructWithRep = string;

export type Type = never;

export type Unit1 = null;

export type Unit2 = Record<string, never>;

export type Unit3 = [];

export type Unit4 = null;

export type Unit5 = "A";

export type Unit6 = { A: [] };

export type Unit7 = { A: Record<string, never> };

export type UnitVariants = "A" | "B" | "C";

export type UntaggedVariants = string | number;

export type UserListSelection<name, age> = { 
		name: name,
		age: age,
	};

export type UserSelection<name, age> = { 
		name: name,
		age: age,
	};

export type Variants = { A: string } | { B: number } | { C: number };
════════════════════════════════════════
